hphp/test/slow/parser/memory_exhaust.php.expectf
Fatal error: memory exhausted in %s/test/slow/parser/memory_exhaust.php on line 3